[package]
name = "text-crypto-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib"]

[profile.dev.package.num-bigint-dig]
opt-level = 3

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8.5"
getrandom = { version = "0.2.11", features = ["js"] }
rot13 = "0.1.1"
rsa = "0.9.1"
wasm-bindgen = "0.2.106"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
zeroize = "1.5"